--- a/lectures/1.md
+++ b/lectures/1.md
@@ -1,1 +1,26 @@
+# Introduction to scalability
+The capability of a **system** to maintain **performance** under increased **load** by adding more **resources**.
 
+## Common Terminology
+- System
+- Performance
+  - Not crashing under load
+  - Available to serve new requests
+  - Responding in a reasonable number of time (latency)
+  ***important***: the performance of any individual request does not need to improve as we scale out, just needs to remain within bouads, under high loads
+- Load
+- Resources
+  - Computing powers
+  - Memory
+  - Number of Physical Machines
+  - Number of Secondary Storages (Disks)
+  - Network Bandwidth
+
+  // Bandwidth describes the maximum data transfer rate of a network or Internet connection. It measures how much data can be sent over a specific connection in a given amount of time. For example, a gigabit Ethernet connection has a bandwidth of 1,000 Mbps, (125 megabytes per second).
+
+
+
+
+## What's a Scalable Architecture
+
+## Different Types of Scaling
